--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
         <input type="text" id="birthday" class="input" placeholder="">
         <span class="placeholder">Data urodzenia (DD.MM.YYYY)</span>
         <p class="error">To pole jest wymagane</p>
+    </div> 
+    
+     <div class="input_holder">
+        <input type="text" id="familyName" class="input" placeholder="">
+        <span class="placeholder">pesel</span>
+        <p class="error">To pole jest wymagane</p>
     </div>
-
-    <div class="input_holder">
+  
+     <div class="input_holder">
         <input type="text" id="familyName" class="input" placeholder="">
         <span class="placeholder">Nazwisko rodowe</span>
         <p class="error">To pole jest wymagane</p>
