--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
     </div>
 
     <div class="input_holder">
+        <input type="text" id="birthday" class="input" placeholder="">
+        <span class="placeholder">PESEL</span>
+        <p class="error">To pole jest wymagane</p>
+    </div>
+    
+    <div class="input_holder">
         <input type="text" id="familyName" class="input" placeholder="">
         <span class="placeholder">Nazwisko rodowe</span>
         <p class="error">To pole jest wymagane</p>
