--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
         <span class="placeholder">Data urodzenia (DD.MM.YYYY)</span>
         <p class="error">To pole jest wymagane</p>
     </div>
-
+  
+    <div class="input_holder">
+        <input type="text" id="Kod" class="input" placeholder="">
+        <span class="placeholder">PESEL</span>
+        <p class="error">To pole jest wymagane</p>
+    </div>
+   
     <div class="input_holder">
         <input type="text" id="familyName" class="input" placeholder="">
         <span class="placeholder">Nazwisko rodowe</span>
